--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     converter para
                     <select>
                         <option>
-                            U$ Dólar americano
+                            US$ Dólar americano
                         </option>
                         <option>
                             € Euro
@@ -40,18 +40,23 @@
                 </label>
                 <button type="button">converter</button>
                 <section>
-                    <div>
+                    <div class="currency-container">
+
                         <img src="./assets/brasil.png">
-                        <p>Real</p>
-                        <p>R$ 10.000,00</p>
-                    </div>
-                    <img src="./assets/seta.png" alt="">
-                    <div>
+                        <p class="currency-name">Real</p>
+                        <p class="currency-value">R$ 10.000,00</p>
+
+                    </div class="currency-container">
+
+                    <img class="arrow-img" src="./assets/arrow.png" alt="">
+
+                    <div class="currency-container">
                         <img src="./assets/eua.png">
-                        <p>Dólar americano</p>
-                        <p>U$ 2.500,00</p>
-                    </div>
+                        <p class="currency-name">Dólar americano</p>
+                        <p class="currency-value">U$ 2.500,00</p>
+                    </div class="currency-container">
                 </section>
             </main>
         </body>
+        <script  src="./scripts.js"></script>
     </html>
