--- a/index.html
+++ b/index.html
@@ -36,20 +36,16 @@
                 </label>
                 <label>
                     valor
-                    <input placeholder="R$ 10.000,00">
+                    <input id="input-real" type="number" placeholder="R$ 10.000,00">
                 </label>
-                <button type="button">converter</button>
+                <button id="converted-button" type="button">converter</button>
                 <section>
                     <div class="currency-container">
-
                         <img src="./assets/brasil.png">
                         <p class="currency-name">Real</p>
                         <p class="currency-value">R$ 10.000,00</p>
-
                     </div class="currency-container">
-
                     <img class="arrow-img" src="./assets/arrow.png" alt="">
-
                     <div class="currency-container">
                         <img src="./assets/eua.png">
                         <p class="currency-name">Dólar americano</p>
@@ -58,5 +54,5 @@
                 </section>
             </main>
         </body>
-        <script  src="./scripts.js"></script>
+        <script src="./scripts.js"></script>
     </html>
