--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
                     <div class="currency-container">
                         <img src="./assets/brasil.png">
                         <p class="currency-name">Real</p>
-                        <p class="currency-value">R$ 10.000,00</p>
+                        <p class="currency-value" id="real-value-text">R$ 10.000,00</p>
                     </div class="currency-container">
+
                     <img class="arrow-img" src="./assets/arrow.png" alt="">
+
                     <div class="currency-container">
                         <img src="./assets/eua.png">
                         <p class="currency-name">Dólar americano</p>
-                        <p class="currency-value">U$ 2.500,00</p>
+                        <p class="currency-value" id="currency-value-text">U$ 2.500,00</p>
                     </div class="currency-container">
                 </section>
             </main>
