Finalizado porem quero adicionar mais opções de moedas e adicionar cambio atual

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <label>
                     converter para
                     <select id="currency-select">
-                        <option>
-                            US$ Dólar americano
+                        <option value="dolar">
+                            US$ Dólar americano
                         </option>
-                        <option>
+                        <option value="euro">
                             € Euro
                         </option>
                     </select>
